Fix deployment workflow to use npm install
Replaced 'npm ci' with 'npm install' due to missing package-lock.json.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,10 +25,12 @@ jobs:
           node-version: 20
           cache: npm
 
-      - run: npm ci
+      # No package-lock.json in your repo, so npm ci fails.
+      - run: npm install
       - run: npm run build
 
       - uses: actions/configure-pages@v5
+
       - uses: actions/upload-pages-artifact@v3
         with:
           path: dist
